Updated to class based library

--- a/index.html
+++ b/index.html
@@ -5532,8 +5532,7 @@
       <circle class="st22" cx="191" cy="521.4" r="1"/>
     </g>
 
-    <g id="Main_Dial">
-
+    <g class="main_dial">
       <g id="primary-minutes-hand" class="hand">
         <g>
           <rect x="141.5" y="396.3" transform="matrix(-5.699604e-03 1 -1 -5.699604e-03 591.1717 210.4556)" class="st58" width="99" height="5.6"/>
